[tool.poetry]
name = "sdcli"
version = "0.1.0"
description = ""
authors = ["Kosuke Uchida <byebyeearthjpn@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.2"
types-requests = "^2.28.11.16"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
ipython = "^8.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sdcli = "app:sdcli"
